day05 ex00 day06 ex00

--- a/day06/Tests/pom.xml
+++ b/day06/Tests/pom.xml
@@ -4,7 +4,7 @@
 						 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-	<groupId>fr.42.numbers</groupId>
+	<groupId>fr.leet.numbers</groupId>
 	<artifactId>Tests</artifactId>
 	<version>1.0.0</version>
 
@@ -40,7 +40,7 @@
 			 <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.5</version>
+                <version>0.8.10</version>
                 <executions>
                     <execution>
                         <goals>
@@ -58,11 +58,12 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.11.0</version>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
         </plugins>
