working on day06 ex03

--- a/day06/ex03/Tests/pom.xml
+++ b/day06/ex03/Tests/pom.xml
@@ -17,7 +17,7 @@
         </plugins>
     </build>
     <version>1.0-SNAPSHOT</version>
-    <name>Chat-folder</name>
+    <name>Tests</name>
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
