--- a/day07/ex02/ORM-folder/pom.xml
+++ b/day07/ex02/ORM-folder/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>auto-service-annotations</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>6.1.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
