day07 ex02 some refactoring

--- a/day07/ex02/ORM-folder/pom.xml
+++ b/day07/ex02/ORM-folder/pom.xml
@@ -8,7 +8,6 @@
     <packaging>jar</packaging>
 
     <name>ORM-folder</name>
-    <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -29,6 +28,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
             <version>6.1.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.10.2</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
